--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "facebookAccount": {
-    "email": "cm",
-    "password": "",
+    "email": "formybro26@gmail.com",
+    "password": "100093021476757",
     "2FASecret": "",
     "i_user": "",
     "proxy": null,
@@ -17,14 +17,14 @@
     "ignoreCommand": []
   },
   "adminBot": [
-    "100071288633689", "100094189827824", "61569320200485","61567716255506"],
+    "100093021476757", "", "",""],
   "whiteListMode": {
     "enable": false,
-    "whiteListIds": ["100071288633689","61567716255506",""],
+    "whiteListIds": ["100093021476757","",""],
     "notes": "if you enable this feature, only the ids in the whiteListIds section can use the bot"
   },
-  "nickNameBot": " Ｓｔｅｗｉｅ ",
-  "prefix": "/",
+  "nickNameBot": "G o j o 🤞",
+  "prefix": "+",
   "database": {
     "type": "sqlite",
     "uriMongodb": "",
